# helloworldEsp32

./: .gitignore  CMakeLists.txt  at_command.md  cfg_part.csv  partitions.csv  sdkconfig  sdkconfig.old
components/air_quality/: CMakeLists.txt  air_quality_app.c  air_quality_app.h
components/cloud/: CMakeLists.txt  cloud_api.c  cloud_api.h  cloud_config_default.h  cloud_mqtt.c  cloud_mqtt.h  cloud_nvs.c  cloud_nvs.h  cloud_tcp.c  cloud_tcp.h
components/commands/: CMakeLists.txt  commands.c  commands.h  commands_list.c  commands_list.h  commands_nvs.c  commands_nvs.h  commands_parser.c  commands_parser.h
components/e840/: CMakeLists.txt  e840_app.c  e840_app.h  e840_uart.c  e840_uart.h
components/fota/: CMakeLists.txt  fota.c  fota.h  fota_nvs.c  fota_nvs.h
components/gsm-at-lib/: CMakeLists.txt  gsm_config.h  gsm_sys_user.h
components/gsm-at-lib/examples/win32/netconn_client_rtos/x64/Release/NETCONN .B061A865.tlog/: NETCONN Client RTOS.lastbuildstate
components/gsm-at-lib/gsm_at_lib/src/gsm/: gsm.c  gsm_input.c  gsm_int.c  gsm_sms.c  gsm_threads.c
components/gsm-at-lib/gsm_at_lib/src/include/gsm/: gsm_private.h  gsm_typedefs.h
components/gsm-at-lib/gsm_at_lib/src/system/: gsm_ll_user.c  gsm_mem_std.c  gsm_sys_user.c
components/gsm-at-lib/snippets/: network_utils.c
components/gsm-at-lib/snippets/include/: network_utils.h
components/gsm-at-lib/user/: gsm_modem_mode.c  gsm_network_status.c  gsm_nvs.c  gsm_ppp_api.c  gsm_ppp_dial.c  gsm_qctl_sms.c  gsm_urc.c  gsm_user_int.c
components/gsm-at-lib/user/include/gsm/: gsm_modem_mode.h  gsm_network_status.h  gsm_nvs.h  gsm_ppp_api.h  gsm_ppp_dial.h  gsm_qctl_sms.h  gsm_urc.h  gsm_user_private.h
components/lwgsm/: CMakeLists.txt
components/lwgsm/snippets/: network_utils.c
components/lwgsm/snippets/include/: network_utils.h
components/lwgsm/src/include/lwgsm/: lwgsm_opts.h
components/lwgsm/src/include/system/: lwgsm_sys.h
components/lwgsm/src/include/system/port/esp32/: lwgsm_sys_port.h
components/lwgsm/src/lwgsm/: lwgsm_mem.c  lwgsm_parser.c  lwgsm_pbuf.c  lwgsm_phonebook.c  lwgsm_ping.c  lwgsm_sms.c  lwgsm_threads.c  lwgsm_timeout.c  lwgsm_utils.c
components/lwgsm/src/system/: lwgsm_ll_esp32.c  lwgsm_sys_esp32.c
components/lwgsm/user/: gsm_modem_mode.c  gsm_user_int.c
components/lwgsm/user/include/: gsm_modem_mode.h  gsm_user_private.h
components/mfc2160/: CMakeLists.txt  mfc2160_app.c  mfc2160_app.h  mfc2160_codes.h  mfc2160_command.c  mfc2160_command.h  mfc2160_enrollment.c  mfc2160_enrollment.h  mfc2160_search.c  mfc2160_search.h  mfc2160_uart.c  mfc2160_uart.h
components/ota/: CMakeLists.txt  ota.c  ota.h  ota_nvs.c  ota_nvs.h
components/ota/certs/: ca_cert.pem
components/ppp/: CMakeLists.txt  pppos_app.c  pppos_app.h
components/rs232/: CMakeLists.txt  rs232_api.c  rs232_api.h
components/sht4x/: sht4x.c  sht4x.h
components/tca6416a/: CMakeLists.txt  TCA6416A.c  TCA6416A.h  TCA6416A_i2c.c  TCA6416A_i2c.h
components/tca95x5/: CMakeLists.txt  tca95x5.c  tca95x5.h
components/vl53l1/: CMakeLists.txt  vl53l1.c  vl53l1.h
components/vl53l1/core/: VL53L1X_api.c  VL53L1X_api.h  VL53L1X_calibration.c  VL53L1X_calibration.h
components/vl53l1/platform/: vl53l1_platform.c  vl53l1_platform.h
components/vl53l1x/: CMakeLists.txt  vl53l1x.c  vl53l1x.h  vl53l1x_app.c  vl53l1x_app.h
components/wifi_nat/: CMakeLists.txt  config.html  http_server.c  http_server.h  lock.html  pages.h  wifi_nat.c  wifi_nat.h  wifi_nat_nvs.c  wifi_nat_nvs.h
main/: CMakeLists.txt  main.c
