
idf_component_register( SRCS "gsm_at_lib/src/gsm/gsm.c"
							 "gsm_at_lib/src/gsm/gsm_utils.c"
							 "gsm_at_lib/src/gsm/gsm_ussd.c"
							 "gsm_at_lib/src/gsm/gsm_unicode.c"
							 "gsm_at_lib/src/gsm/gsm_timeout.c"
							 "gsm_at_lib/src/gsm/gsm_threads.c"
							 "gsm_at_lib/src/gsm/gsm_sms.c"
							 "gsm_at_lib/src/gsm/gsm_sim.c"
							 "gsm_at_lib/src/gsm/gsm_ping.c"
							 "gsm_at_lib/src/gsm/gsm_pbuf.c"
							 "gsm_at_lib/src/gsm/gsm_parser.c"
							 "gsm_at_lib/src/gsm/gsm_operator.c"
							 "gsm_at_lib/src/gsm/gsm_network.c"
							 "gsm_at_lib/src/gsm/gsm_mem.c"
							 "gsm_at_lib/src/gsm/gsm_int.c"
							 "gsm_at_lib/src/gsm/gsm_input.c"
							 "gsm_at_lib/src/gsm/gsm_evt.c"
							 "gsm_at_lib/src/gsm/gsm_device_info.c"
							 "gsm_at_lib/src/gsm/gsm_debug.c"
							 "gsm_at_lib/src/gsm/gsm_conn.c"
							 "gsm_at_lib/src/gsm/gsm_call.c"
							 "gsm_at_lib/src/gsm/gsm_buff.c"
							 "gsm_at_lib/src/system/gsm_ll_user.c"
							 "gsm_at_lib/src/system/gsm_sys_user.c"
							 "gsm_at_lib/src/system/gsm_mem_std.c"
							 "snippets/network_utils.c"
							 "user/gsm_ppp_dial.c"
							 "user/gsm_network_status.c"
							 "user/gsm_user_int.c"
							 "user/gsm_ppp_api.c"
							 "user/gsm_modem_mode.c"
							 "user/gsm_nvs.c"
							 "user/gsm_urc.c"
							 "user/gsm_qctl_sms.c"
						INCLUDE_DIRS "." "gsm_at_lib/src/include" "snippets/include" "user/include"
						REQUIRES ""
						PRIV_REQUIRES "nvs_flash")
