idf_component_register(SRCS "src/lwgsm/lwgsm.c"
                            "src/lwgsm/lwgsm_utils.c"
                            "src/lwgsm/lwgsm_ussd.c"
                            "src/lwgsm/lwgsm_unicode.c"
                            "src/lwgsm/lwgsm_timeout.c"
                            "src/lwgsm/lwgsm_threads.c"
                            "src/lwgsm/lwgsm_sms.c"
                            "src/lwgsm/lwgsm_sim.c"
                            "src/lwgsm/lwgsm_ping.c"
                            "src/lwgsm/lwgsm_pbuf.c"
                            "src/lwgsm/lwgsm_parser.c"
                            "src/lwgsm/lwgsm_operator.c"
                            "src/lwgsm/lwgsm_network.c"
                            "src/lwgsm/lwgsm_mem.c"
                            "src/lwgsm/lwgsm_int.c"
                            "src/lwgsm/lwgsm_input.c"
                            "src/lwgsm/lwgsm_evt.c"
                            "src/lwgsm/lwgsm_device_info.c"
                            "src/lwgsm/lwgsm_debug.c"
                            "src/lwgsm/lwgsm_conn.c"
                            "src/lwgsm/lwgsm_call.c"
                            "src/lwgsm/lwgsm_buff.c"                    
                            "src/system/lwgsm_ll_esp32.c"
                            "src/system/lwgsm_mem_lwmem.c"
                            "src/system/lwgsm_sys_esp32.c"
                            "snippets/network_utils.c"
                            "user/gsm_modem_mode.c"
                            "user/gsm_user_int.c"
                            INCLUDE_DIRS "." "src/include" "snippets/include" "user/include"
                            REQUIRES ""
                            PRIV_REQUIRES "nvs_flash"
)